<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/key"
        android:icon="@drawable/key"
        android:title="@string/key_string_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_product"
        android:icon="@drawable/add"
        android:title="@string/add_product"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/orders"
        android:icon="@drawable/money"
        android:title="@string/see_all_orders"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/refresh"
        android:title="@string/refresh_string_title"
        app:showAsAction="always" />
</menu>